argo-cd/custom/Service-argocd-repo-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-repo-server
spec:
  ports:
  - name: tcp-server
    port: 8081
    protocol: TCP
    targetPort: 8081
  - name: tcp-metrics
    port: 8084
    protocol: TCP
    targetPort: 8084
