argo-cd/custom/Service-argocd-server-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-metrics
spec:
  ports:
  - name: tcp-metrics
    port: 8083
    protocol: TCP
    targetPort: 8083
