argo-cd/custom/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd
spec:
  gateways:
    - ingressgateway.istio-system.svc.cluster.local
  http:
    - route:
        - destination:
            port:
              number: 80
            host: argocd-server
